More polishing